--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-watch": "jest --watch"
   },
   "dependencies": {
+    "html-react-parser": "^5.2.5",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
